# ZENITH-V2.0

./: .gitignore  .pre-commit-config.yaml  DEMO.md  README.md  demo.py  diagnostic.py  nedemo.py  pyproject.toml  requirements.txt
tests/: test_cve.py  test_edge_cases.py
zenith/: .pre-commit-config.yaml  cli.py  pyproject.toml  server.py
zenith-vscode/: package-lock.json  package.json  tsconfig.json
zenith-vscode/src/: extension.ts
zenith/ai/: inference.py
zenith/hooks/: pre_commit.py
zenith/scanner/: cve.py  secrets.py
