[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zenith"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["click", "rich", "requests", "fastapi", "uvicorn", "torch", "transformers", "accelerate", "onnxruntime"]

[project.scripts]
zenith = "zenith.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
